fix issue with filtering and detail

--- a/builds/development/partials/app.html
+++ b/builds/development/partials/app.html
@@ -3,7 +3,7 @@
     <h1>Artist Directory</h1>
     <label *ngIf="query">search for: {{query}}</label>
     <input
-      [(ngModel)]="query" placeholder="type in search term"
+      [(ngModel)]="query" (click)="currentPet=''" placeholder="type in search term"
       />
 </div>
 </div>
